<?xml version="1.0"?>
<package format="2">
    <name>nturt_rpi_deployer</name>
    <version>0.0.0</version>
    <description>ROS package for deploying ros to raspberry pi.</description>
    <maintainer email="jet22854111@gmail.com">quantumspawner</maintainer>
    <author email="jet22854111@gmail.com">quantumspawner</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>can_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>can_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    
    <!-- execute dependencies -->
    <exec_depend>can_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
</package>
