<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_rpi_deployer</name>
    <version>0.0.0</version>
    <description>ROS2 package for deploying ros2 to raspberry pi.</description>
    <maintainer email="jet22854111@gmail.com">QuantumSpawner</maintainer>
    <author email="jet22854111@gmail.com">QuantumSpawner</author>
    <license>TODO</license>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- general dependencies -->
    <depend>boost</depend>
    <depend>libmnl-dev</depend>
    <depend>nturt_ros_interface</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>

    <!-- execute dependencise -->
    <exec_depend>iputils-ping</exec_depend>
    <exec_depend>nturt_bag_recorder</exec_depend>
    <exec_depend>nturt_can_config</exec_depend>
    <exec_depend>nturt_can_parser</exec_depend>
    <exec_depend>nturt_led_controller</exec_depend>
    <exec_depend>nturt_push_to_control_tower</exec_depend>
    <exec_depend>nturt_realtime_utils</exec_depend>
    <exec_depend>nturt_screen_controller</exec_depend>
    <exec_depend>ros2_socketcan</exec_depend>

    <!-- test dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
